Add simple mail form.

--- a/mailer-front/src/App.css
+++ b/mailer-front/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.main-container {
+    min-height: 100vh;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.main-container__inner {
+    min-width: 300px;
+    padding: 22px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 12px 22px 0 rgba(0, 0, 0, 0.16);
+    border: solid 1px #e5e5e5;
+}
+@media (max-width: 400px) {
+    .main-container__inner {
+        max-width: 300px;
+    }
+}
+
+.main-container__inner > h1 {
+    margin: 0;
+}
+
+.main-container__inner > p, label {
+    margin: 14px 0 0 0;
+    font-size: 20px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
