Fix mobile styles.

--- a/mailer-front/src/App.css
+++ b/mailer-front/src/App.css
@@ -24,14 +24,15 @@
     margin: 0;
 }
 
-@media (max-width: 400px) {
-    .main-container__info-box {
-        width: auto;
-    }
-}
-
 .main-container__info-box {
     margin: 14px 0 0 0;
     font-size: 20px;
     width: 540px;
+    word-wrap: break-word;
+}
+
+@media (max-width: 400px) {
+    .main-container__info-box {
+        width: 100%;
+    }
 }
